third_party/move/move-compiler/tests/move_check/simplifier/lambda_lifted.exp
error[E07005]: invalid transfer of references
   ┌─ tests/move_check/simplifier/lambda_lifted.move:34:13
   │
33 │         lifted_lambda(&mut a,
   │                       ------ It is still being mutably borrowed by this reference
34 │             lifted_lambda(&mut a, z))
   │             ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

